--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="wrap-master" style="border: 1px solid rgb(192, 189, 189);">
                 <div class="title-master">
                     <span><img src="png_icons_64px/172626_user_male_icon.png" alt="" width="28px" height="28px"></span>
-                    <span class="name-master">tentang saya</span>
+                    <span class="name-master">sekilas tentang saya</span>
                 </div>
                 <div class="master-card">
                     <!-- tentang saya -->
@@ -31,7 +31,7 @@
 
                         <!-- <p>Tantangan tersulit dalam hal yang berkaitan dengan Komputer adalah Pemrograman. tetapi saya memilih mempelajarinya dan materi tentang website adalah materi yang saya pelajari, HTML, CSS, JS, PHP serta beberapa Framework dan CMS dapat saya kuasai.</p> -->
 
-                        <p>Hallo! Perkenalkan saya TRISNA ARMANDA SAPUTRA, saya adalah seseorang yang mempunyai ketertarikan dengan sebuah komputer dengan keterampilan mengoperasikan komputer, memperbaiki dan melakukan konfigurasi.</p>
+                        <p>Hallo! Perkenalkan saya TRISNA ARMANDA SAPUTRA, saya adalah seseorang yang mempunyai ketertarikan dengan sebuah komputer dengan keterampilan mengoperasikan komputer, memperbaiki dan melakukan konfigurasi jaringan internet.</p>
                     </div>
                 </div>
             </div>
@@ -48,7 +48,8 @@
                     <!--  -->
                     <div class="wrap-network">
                         <div class="network-group">
-                            <span><img src="mikrotik_logo/mt.png" width="70px" alt=""></span>
+                            <span class="key"><img src="mikrotik_logo/mt.png" width="50px" alt=""></span>
+                            <span class="value"><div class="pers">45%</div></span>
                         </div>
                     </div>
                 </div>
@@ -121,7 +122,7 @@
                 <div class="title-master">
                     <span><img src="png_icons_64px/4550863_classmates_education_learn_learning_teaching_icon.png" alt="" width="28px" height="28px"></span>
                     <!-- pendidikan -->
-                    <span class="name-master">pendidikan</span>
+                    <span class="name-master">pendidikan terakhir</span>
                 </div>
                 <div class="master-card">
                     <!-- pendidikan -->
@@ -145,7 +146,7 @@
                 <div class="title-master">
                     <span><img src="png_icons_64px/326663_language_web_icon.png" alt="" width="28px" height="28px"></span>
                     <!-- network -->
-                    <span class="name-master">pengalaman IT</span>
+                    <span class="name-master">pengalaman IT terbaik</span>
                 </div>
                 <div class="master-card">
                     <!-- work -->
@@ -172,6 +173,7 @@
             <!-- name user -->
             <div class="wrap-name">
                 <h3 class="name">trisna armanda saputra</h3>
+                <span>teknisi komputer & network</span>
             </div>
 
             <!--  -->
@@ -242,6 +244,38 @@
             <!--  -->
             <div class="wrap-master" style="border: 1px solid rgb(192, 189, 189);">
                 <div class="title-master">
+                    <span><img src="png_icons_64px/4178966_cloud_computer_computing_connection_lan_icon.png" alt="" width="28px" height="28px"></span>
+                    <!--  -->
+                    <span class="name-master">media sosial</span>
+                </div>
+                <div class="master-card">
+                    <!-- media sosial -->
+                    <div class="wrap-medsos">
+                        <!-- <div class="group-medsos">
+                            <span class="key">
+                                <img src="png_icons_64px/1964405_linkedin_logo_media_social_icon.png" width="25px" height="25px" alt="">
+                            </span>
+                            <span class="value"><a href=""></a></span>
+                        </div> -->
+                        <div class="group-medsos">
+                            <span class="key">
+                                <img src="png_icons_64px/1964417_github_logo_media_social_icon.png" width="25px" height="25px" alt="">
+                            </span>
+                            <span class="value"><a href="https://github.com/EMDE5">EMDE5</a></span>
+                        </div>
+                        <!-- <div class="group-medsos">
+                            <span class="key">
+                                <img src="png_icons_64px/1964411_instagram_logo_media_social_icon.png" width="25px" height="25px" alt="">
+                            </span>
+                            <span class="value"><a href=""></a></span>
+                        </div> -->
+                    </div>
+                </div>
+            </div>
+
+            <!--  -->
+            <div class="wrap-master" style="border: 1px solid rgb(192, 189, 189);">
+                <div class="title-master">
                     <span><img src="png_icons_64px/6811928_dictionary_foreign_international_language_translate_icon.png" alt="" width="28px" height="28px"></span>
                     <!-- network -->
                     <span class="name-master">bahasa</span>
@@ -262,3 +296,15 @@
 
 </body>
 </html>
+
+ 
+<!-- <div class="wrap-master" style="border: 1px solid rgb(192, 189, 189);">
+    <div class="title-master">
+        <span><img src="png_icons_64px/4178966_cloud_computer_computing_connection_lan_icon.png" alt="" width="28px" height="28px"></span>
+       
+        <span class="name-master"></span>
+    </div>
+    <div class="master-card">
+       
+    </div>
+</div> -->
